--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,40 @@
-# Compiled class file
-*.class
 
-# Log file
-*.log
+# Java class files
+**/*.class
 
-# BlueJ files
-*.ctxt
+# generated files
+**/bin/
+**/gen/
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Local configuration file (sdk path, etc)
+local.properties
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# Eclipse project files
+**/.classpath
+**/.project
+**/.settings/
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# Intellij project files
+*.iml
+*.ipr
+*.iws
+.idea/
+**out/
+
+#Gradle
+.gradletasknamecache
+**/.gradle/
+**/build/
+
+#Other
+**/.DS_Store
+
+#Vertx
+.vertx/
+
+# Ignite work directory
+ignite/
+work/
+
+# logs directory
+logs/
